syntax = "proto3";
package pb;

message Empty {}

message GetRequest {
    string Key = 1;
    Result Result = 2;
}

message SetRequest {
    string Key = 1;
    bytes Value = 2;
    Result Result = 3;
}

message FlushKeyRequest {
    string Key = 1;
}

message GetResponse {
    bytes Value = 1;
    Result Result = 2;
}

message Result {
    string Status = 1;
    string Error = 2;
}

service Cache {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (Result) {}
    rpc FlushAll(Empty) returns (Result) {}
    rpc FlushKey(FlushKeyRequest) returns (Result) {}
    rpc Listener(Empty) returns (stream Result) {}
}